fix scroll hover stop. fix overlay being cut off

--- a/shared/chat/chat.css
+++ b/shared/chat/chat.css
@@ -28,6 +28,6 @@
   }
 }
 
-.scroll-ignore-pointer {
+.scroll-ignore-pointer .WrapperMessage-hoverBox {
   pointer-events: none;
 }
